# react-bazel-rules-js

./: BUILD.bazel  WORKSPACE.bazel  bazel-bin  bazel-out  bazel-react-bazel-rules-js  bazel-testlogs  index.jsx  package.json  pnpm-lock.yaml  webpack.config.js
src/: App.jsx
src/components/button/: Button.jsx
